--- a/src/pomodoro.scss
+++ b/src/pomodoro.scss
@@ -14,7 +14,7 @@
     font-size: 3vh;
     border: white 0.1rem solid;
     border-radius: 2vh;
-    padding: 1vh 0 1vh 0;
+    padding: 1vh 0;
     width: 100%;
 }
 .pomodoro {
@@ -49,7 +49,8 @@
                 font-size: 3vh;
                 width: 50%;
                 border: white 0.1rem solid;
-                border-radius: 2vh;
+                border-radius: min(3vh,3vw);
+                padding-left: 1vh;
             }
         }
     }
