Updated some of the ui

--- a/src/To-do.scss
+++ b/src/To-do.scss
@@ -14,10 +14,11 @@
         float: left;
     }
     button {
-        background-color: #2b2b2b;
-        color: white;
+        background-color: #dddddd;
+        color: black;
         font-size: 3vh;
-        border: white 0.1rem solid;
+        font-weight: 500;
+        border: #2b2b2b 0.1rem solid;
         border-radius: 2vh;
         padding: 0 1vh 0 1vh;
         width: 30%;
