--- a/src/index.scss
+++ b/src/index.scss
@@ -1,235 +1,245 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter',Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 400;
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", Impact, Haettenschweiler, "Arial Narrow Bold",
+    sans-serif;
+  font-weight: 400;
 }
 
 html {
-    color: white;
-    background-color: #333333;
+  color: white;
+  background-color: #333333;
 }
 body {
-    padding: 7vh 0 0 0;
+  padding: 7vh 0 0 0;
 }
 button:active {
-    transform: scale(0.98);
+  transform: scale(0.98);
 }
 nav {
-    z-index: 100;
-    top: 0;
-    position: fixed;
-    width: 100vw;
-    background-color: black;
-    padding: 1.3vh 0 1.3vh 0;
-    box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
+  z-index: 100;
+  top: 0;
+  position: fixed;
+  width: 100vw;
+  background-color: black;
+  padding: 1.3vh 0 1.3vh 0;
+  box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
+  display: flex;
+  justify-content: space-between;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  ul {
+    list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    a {
-        color: white;
-        text-decoration: none;
-    }
-    ul {
-        list-style-type: none;
-        display: flex;
-        flex-direction: row;
-        font-size: 3vh;
+    flex-direction: row;
+    font-size: 3vh;
+    margin: 0;
+    li {
+      margin: 0 4vh 0 0;
+      h1 {
         margin: 0;
-        li {
-            margin: 0 4vh 0 0;
-            h1 {
-                margin: 0;
-            }
-        }
+      }
     }
-    h1 {
-        font-size: 3vh;
-        padding: 0;
-        margin: 0 0 0 2vh;
-        font-weight:  400;
-    }
+  }
+  h1 {
+    font-size: 3vh;
+    padding: 0;
+    margin: 0 0 0 2vh;
+    font-weight: 400;
+  }
 }
 main {
-    min-height: 66vh;
+  min-height: 66vh;
 }
 #root {
-    min-height: 100vh;
+  min-height: 100vh;
 }
-.header, .description {
-
-    text-align: center;
+.header,
+.description {
+  text-align: center;
 }
-h1,.header{
-    padding: 1vh;
-    font-size: 5vh;
+h1,
+.header {
+  padding: 1vh;
+  font-size: 5vh;
 }
-p,.description {
-    padding: 0.5vh;
-    font-size: 2vh;
+p,
+.description {
+  padding: 0.5vh;
+  font-size: 2vh;
 }
 section {
-    padding: 1rem 7% 1rem 7%;
+  padding: 1rem 7% 1rem 7%;
 }
 .HambergerContainer {
-    display: none;
-    flex-direction: column;
+  display: none;
+  flex-direction: column;
 }
 .Hamberger {
-    border-radius: 100vh;
-    width: 3.8vh;
-    height: 0.4vh;
-    background-color: white;
-    margin: 0.4vh 0 0.4vh 2vh;
-    display: inherit;
+  border-radius: 100vh;
+  width: 3.8vh;
+  height: 0.4vh;
+  background-color: white;
+  margin: 0.4vh 0 0.4vh 2vh;
+  display: inherit;
 }
 #icon {
-    width: 2.5vh;
-    height: 2.5vh;
+  width: 2.5vh;
+  height: 2.5vh;
 }
 .Uipseudo-element {
-    width: 0%;
-    height: 0.5vh;
-    background-color: #0077ff;
-    border-radius: 100vh;
+  width: 0%;
+  height: 0.5vh;
+  background-color: #0077ff;
+  border-radius: 100vh;
 }
 .pictureContainer {
-    display: grid;
-    grid-template-rows: 42.75vh 42.75vh;
-    grid-template-columns: repeat(3,1fr);
-    grid-column-gap: 1vw;
-    grid-row-gap: 1vw;
+  display: grid;
+  grid-template-rows: 42.75vh 42.75vh;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1vw;
+  grid-row-gap: 1vw;
 
-    .thumbnail {
-        grid-row: 1/2;
-        grid-column: 1/4;
+  .thumbnail {
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+  .tabThumbnail {
+    grid-row: span 1;
+    grid-column: span 1;
+  }
+  article {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 2vh;
+    img {
+      width: 100%;
+      height: 100%;
+      transition: inherit;
+      filter: brightness(1);
     }
-    .tabThumbnail {
-        grid-row: span 1;
-        grid-column: span 1;
+    div {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 10;
+      background-color: #333333e0;
+      transition: inherit;
+      border-bottom: white 0.5vh solid;
+      h1 {
+        font-size: 3vh;
+        line-height: 3vh;
+        text-align: center;
+      }
+      p {
+        font-size: 2.5vh;
+        text-align: center;
+      }
+      transform: translate(0%, -101%);
     }
-    article {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        border-radius: 2vh;
-        img {
-            width: 100%;
-            height: 100%;
-            transition: inherit;
-            filter: brightness(1);
-        }
-        div {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index: 10;
-            background-color: #333333e0;
-            transition: inherit;
-            border-bottom: white 0.5vh solid;
-            h1 {
-                font-size: 3vh;
-                line-height: 3vh;
-                text-align: center;
-            }
-            p {
-                font-size: 2.5vh;
-                text-align: center;
-            }
-            transform: translate(0%, -101%);
-        }
-    }
+  }
 }
 #contactUs {
-    background-color: #2b2b2b;
-    margin-top: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    display: flex;
-    .aboutUs {
-        .contactHeader {
-            font-size: 3vh;
-        }
-        text-align: center;
-        width: 70%;
-        border-right: 0.1rem solid white;
-        padding-right: 5%;
+  background-color: #2b2b2b;
+  margin-top: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  .aboutUs {
+    .contactHeader {
+      font-size: 3vh;
     }
-    .contactUs {
-        .contactHeader {
-            font-size: 3vh;
-        }
-        padding-left: 5%;
-        width: 30%;
-        a {
-            color: #aca7ff;
-        }
+    text-align: center;
+    width: 70%;
+    border-right: 0.1rem solid white;
+    padding-right: 5%;
+  }
+  .contactUs {
+    .contactHeader {
+      font-size: 3vh;
     }
+    padding-left: 5%;
+    width: 30%;
+    a {
+      color: #aca7ff;
+    }
+  }
 }
 .first-article {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .pictureContainerMobile {
-    display: none;
-    article {
-        margin-top: 10rem;
-        img {
-            width: 100%;
-            height: 100%;
-            border-radius: 5vw;
-        }
-        h1 {
-            text-align: center;
-            font-size: 6vw;
-        }
-        p {
-            text-align: center;
-            font-size: 3.5vw;
-        }
+  display: none;
+  article {
+    margin-top: 10rem;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 5vw;
     }
+    h1 {
+      text-align: center;
+      font-size: 6vw;
+    }
+    p {
+      text-align: center;
+      font-size: 3.5vw;
+    }
+  }
 }
 
 @media (max-aspect-ratio: 1/1) {
-    .UIListItem span {
-        display: none;
+  body {
+    padding: 4vh 0 0 0;
+  }
+  .UIListItem span {
+    display: none;
+  }
+  .HambergerContainer {
+    display: flex;
+  }
+  nav .logo {
+    display: none;
+  }
+  nav ul li {
+    margin: 0 2vh 0 1vh;
+  }
+  .pictureContainer {
+    display: none;
+  }
+  .pictureContainerMobile {
+    display: block;
+    article {
+      margin: 6vh 0;
     }
-    .HambergerContainer {
-        display: flex;
+  }
+
+  h1,
+  .header {
+    font-size: 6vw;
+  }
+  p,
+  .description {
+    font-size: 4vw;
+  }
+  #contactUs {
+    flex-direction: column;
+    .aboutUs {
+      width: 100%;
+      padding-right: 0;
+      border-right: 0px;
+      border-bottom: 0.1rem solid white;
     }
-    nav .logo {
-        display: none;
+    .contactUs {
+      padding-left: 0;
+      width: 100%;
     }
-    nav ul li {
-        margin: 0 2vh 0 1vh;
-    }
-    .pictureContainer {
-        display: none;
-    }
-    .pictureContainerMobile {
-        display: block;
-    }
-    
-    h1,.header {
-        font-size: 6vw;
-    }
-    p,.description {
-        font-size: 4vw;
-    }
-    #contactUs {
-        flex-direction: column;
-        .aboutUs {
-            width: 100%;
-            padding-right: 0;
-            border-right: 0px;
-            border-bottom: 0.1rem solid white;
-        }
-        .contactUs {
-            padding-left: 0;
-            width: 100%;
-        }
-    }
-    
+  }
 }
