--- a/src/weather.scss
+++ b/src/weather.scss
@@ -1,78 +1,78 @@
 .weather {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 3vw;
-    figure {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #34343e;
-        border-radius: 2vh;
-        border-color: rgb(184, 188, 189);
-        border-style: solid;
-        border-width: 0.5vh;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-        div {
-            position:  relative;
-            z-index: 1;
-        }  
-        .tempsub {
-            text-align: center;
-            font-size: max(2vh,1.3vw);
-            font-weight: 500;
-        }
-        .TemperatureHeaders {
-            text-align: center;
-            font-size: max(3vh,2.2vw);
-        }
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 3vw;
+  figure {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #34343e;
+    border-radius: 2vh;
+    border-color: rgb(184, 188, 189);
+    border-style: solid;
+    border-width: 0.5vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    div {
+      position: relative;
+      z-index: 1;
     }
-    #Precipitation {
-        background-image: url('./Weather/Precip Day.jpeg');
+    .tempsub {
+      text-align: center;
+      font-size: max(2vh, 1.3vw);
+      font-weight: 500;
     }
-    #humidity {
-        background-image: url('./Weather/Wind Day.jpeg');
-        grid-row: 1/1;
-        grid-column: 1/1;
+    .TemperatureHeaders {
+      text-align: center;
+      font-size: max(3vh, 2.2vw);
     }
-    #weatherIconTemperature {
-        grid-row: 1/1;
-        grid-column: 2/4;
-        background-image: url('/Weather/10001.jpeg');
-    }  
-    figure::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 0;
-        background-color: #00000053;
-        border-radius: 2vh;
-    }  
+  }
+  #Precipitation {
+    background-image: url("/Weather/Precip Day.jpeg");
+  }
+  #humidity {
+    background-image: url("/Weather/Wind Day.jpeg");
+    grid-row: 1/1;
+    grid-column: 1/1;
+  }
+  #weatherIconTemperature {
+    grid-row: 1/1;
+    grid-column: 2/4;
+    background-image: url("/Weather/10001.jpeg");
+  }
+  figure::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background-color: #00000053;
+    border-radius: 2vh;
+  }
 }
 @media (max-aspect-ratio: 1/1) {
-    .weather {
-        margin: 0;
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(2,1fr);
-        grid-column-gap: 2vh;
-        grid-row-gap: 2vh;
-        #weatherIconTemperature {
-            grid-row: 1/1;
-            grid-column: 1/3;
-        }
-        #humidity {
-            grid-row: 2/2;
-            grid-column: 1/1;
-        }
-        #Precipitation {
-            grid-row: 2/2;
-            grid-column: 2/2;
-        }
+  .weather {
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 2vh;
+    grid-row-gap: 2vh;
+    #weatherIconTemperature {
+      grid-row: 1/1;
+      grid-column: 1/3;
     }
+    #humidity {
+      grid-row: 2/2;
+      grid-column: 1/1;
+    }
+    #Precipitation {
+      grid-row: 2/2;
+      grid-column: 2/2;
+    }
+  }
 }
