--- a/src/index.scss
+++ b/src/index.scss
@@ -42,7 +42,7 @@ header {
       display: flex;
       flex-direction: row;
       font-size: 3vh;
-      margin: 0;
+      margin: 0 1vh;
       .UIListItem {
         margin: 0 2vh 0 0;
         h1 {
