--- a/src/To-do.scss
+++ b/src/To-do.scss
@@ -1,86 +1,109 @@
+:root {
+  --main-background-color-primary: #eaeaea;
+  --main-color-primary: black;
+  --navbar-color-primary: #dedede;
+  --main-background-color-secondary: #2b2b2b;
+  --main-color-secondary: white;
+  --navbar-color-secondary: black;
+}
+[data-theme="dark"] {
+  --main-background-color-primary: #2b2b2b;
+  --main-color-primary: white;
+  --navbar-color-primary: black;
+  --main-background-color-secondary: #eaeaea;
+  --main-color-secondary: black;
+  --navbar-color-secondary: #dedede;
+}
+[data-theme="light"] {
+  --main-background-color-primary: #eaeaea;
+  --main-color-primary: black;
+  --navbar-color-primary: #dedede;
+  --main-background-color-secondary: #2b2b2b;
+  --main-color-secondary: white;
+  --navbar-color-secondary: black;
+}
 .setTask {
-    display: flex;
-    padding: 5vw;
-    input {
-        margin: 1rem;
-        position: relative;
-        background-color: #2b2b2b;
-        color: white;
-        font-size: 3vh;
-        border: white 0.1rem solid;
-        border-radius: 2vh;
-        padding: 1vh 1vh 1vh 1vh;
-        width: 70%;
-        float: left;
-    }
-    button {
-        background-color: #dddddd;
-        color: black;
-        font-size: 3vh;
-        font-weight: 500;
-        border: #2b2b2b 0.1rem solid;
-        border-radius: 2vh;
-        padding: 0 1vh 0 1vh;
-        width: 30%;
-        margin: 1rem;
-    }
+  display: flex;
+  padding: 5vw;
+  input {
+    margin: 1rem;
+    position: relative;
+    background-color: var(--main-background-color-primary);
+    color: var(--main-color-primary);
+    font-size: 3vh;
+    border: var(--main-color-primary) 0.15rem solid;
+    border-radius: 2vh;
+    padding: 1vh 1vh 1vh 1vh;
+    width: 70%;
+    float: left;
+  }
+  button {
+    background-color: var(--navbar-color-secondary);
+    color: var(--main-color-secondary);
+    font-size: 3vh;
+    font-weight: 500;
+    border-radius: 2vh;
+    padding: 0 1vh 0 1vh;
+    width: 30%;
+    margin: 1rem;
+  }
 }
 .listContainer {
-    margin: 0 5vw 0 5vw;
+  margin: 0 5vw 0 5vw;
+  padding: 0;
+  border: var(--main-color-primary) 0.15rem solid;
+  border-radius: 1rem;
+  transition: height 0.5s ease;
+  ol {
     padding: 0;
-    border:  white 0.1rem solid;
-    border-radius: 1rem;
-    ol {
-        padding: 0;
-        .listItems {
-            padding: 1vh;
-            list-style: none;
-            font-size: 3vh;
-            border-bottom: white 0.1rem solid;
-            border-top: white 0.1rem solid;
-            margin: 0;
-            display: flex;
-            justify-content: space-between;
-            span {
-                max-width: 70%;
-                word-wrap: break-word;
-            }
-            button {
-                border: none;
-                background-color: #2b2b2b;
-                color: white;
-                border-radius: 2vh;
-                margin: 0 0.3vw 0 0.3vw;
-                font-size: 0;
-                i {
-                    font-size: 3vh;
-                }
-                :active {
-                    transform: scale(0.87);
-                }
-            }
+    .listItems {
+      padding: 1vh;
+      list-style: none;
+      font-size: 3vh;
+      border-bottom: var(--main-color-primary) 0.15rem solid;
+      border-top: var(--main-color-primary) 0.15rem solid;
+      margin: 0;
+      display: flex;
+      justify-content: space-between;
+      span {
+        max-width: 70%;
+        word-wrap: break-word;
+      }
+      button {
+        border: none;
+        color: var(--main-color-primary);
+        border-radius: 2vh;
+        margin: 0 0.3vw 0 0.3vw;
+        font-size: 0;
+        i {
+          font-size: 3vh;
         }
-        .selected {
-            background-color: #001c3d;
+        :active {
+          transform: scale(0.87);
         }
-        .timed {
-            background-color: #00391a;
-        }
+      }
     }
+    .selected {
+      background-color: #001c3d;
+    }
+    .timed {
+      background-color: #00391a;
+    }
+  }
 }
 @media (max-aspect-ratio: 1/1) {
-    .listContainer{
-        ol {
-            .listItems {
-                span {
-                    max-width: 40%;
-                }
-                button {
-                    i {
-                        font-size: 2.5vh;
-                    }
-                }
-            }
+  .listContainer {
+    ol {
+      .listItems {
+        span {
+          max-width: 40%;
         }
+        button {
+          i {
+            font-size: 2.5vh;
+          }
+        }
+      }
     }
+  }
 }
