--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,28 @@
+:root {
+  --main-background-color-primary: #eaeaea;
+  --main-color-primary: black;
+  --navbar-color-primary: #dedede;
+  --main-background-color-secondary: #2b2b2b;
+  --main-color-secondary: white;
+  --navbar-color-secondary: black;
+  --max: 999999999;
+}
+[data-theme="dark"] {
+  --main-background-color-primary: #2b2b2b;
+  --main-color-primary: white;
+  --navbar-color-primary: black;
+  --main-background-color-secondary: #eaeaea;
+  --main-color-secondary: black;
+  --navbar-color-secondary: #dedede;
+}
+[data-theme="light"] {
+  --main-background-color-primary: #eaeaea;
+  --main-color-primary: black;
+  --navbar-color-primary: #dedede;
+  --main-background-color-secondary: #2b2b2b;
+  --main-color-secondary: white;
+  --navbar-color-secondary: black;
+}
 html,
 body {
   margin: 0;
@@ -8,8 +33,8 @@ body {
 }
 
 html {
-  color: white;
-  background-color: #333333;
+  color: var(--main-color-primary);
+  background-color: var(--main-background-color-primary);
 }
 body {
   padding: 7vh 0 0 0;
@@ -23,18 +48,18 @@ header {
   width: 100vw;
   margin: 0;
   padding: 0;
-  z-index: 100;
+  z-index: var(--max);
   nav {
     margin: 0;
     top: 0;
-    background-color: black;
+    background-color: var(--navbar-color-primary);
     padding: 1.3vh 0 1.3vh 0;
     width: 100%;
-    box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
+    box-shadow: 2px 2px 2px 2px rgba($color: #505050, $alpha: 0.1);
     display: flex;
     justify-content: space-between;
     a {
-      color: white;
+      color: var(--main-color-primary);
       text-decoration: none;
     }
     ul {
@@ -45,6 +70,7 @@ header {
       margin: 0 1vh;
       .UIListItem {
         margin: 0 2vh 0 0;
+        font-weight: 500;
         h1 {
           margin: 0;
         }
@@ -54,7 +80,7 @@ header {
       font-size: 3vh;
       padding: 0;
       margin: 0 0 0 2vh;
-      font-weight: 400;
+      font-weight: 500;
     }
   }
   #HambergerMenu {
@@ -65,7 +91,7 @@ header {
         border-radius: 100vh;
         width: 3.8vh;
         height: 0.4vh;
-        background-color: white;
+        background-color: var(--main-color-primary);
         margin: 0.4vh 0 0.4vh 2vh;
         display: inherit;
       }
@@ -135,6 +161,7 @@ section {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    border: var(--main-background-color-secondary) 0.4vh solid;
     border-radius: 2vh;
     img {
       width: 100%;
@@ -147,10 +174,11 @@ section {
       top: 0;
       width: 100%;
       z-index: 10;
-      background-color: #333333e0;
+      background-color: #cacacab0;
       transition: inherit;
       border-bottom: white 0.5vh solid;
       h1 {
+        margin-top: 2vh;
         font-size: 3vh;
         line-height: 3vh;
         text-align: center;
@@ -164,7 +192,6 @@ section {
   }
 }
 #contactUs {
-  background-color: #2b2b2b;
   margin-top: 1rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -175,7 +202,7 @@ section {
     }
     text-align: center;
     width: 70%;
-    border-right: 0.1rem solid white;
+    border-right: 0.2rem solid var(--main-color-secondary);
     padding-right: 5%;
   }
   .contactUs {
@@ -185,7 +212,7 @@ section {
     padding-left: 5%;
     width: 30%;
     a {
-      color: #aca7ff;
+      color: #3f055a;
     }
   }
 }
@@ -193,7 +220,6 @@ section {
   margin: 0;
   padding: 0;
 }
-
 .pictureContainerMobile {
   display: none;
   article {
@@ -257,7 +283,7 @@ section {
       width: 100%;
       padding-right: 0;
       border-right: 0px;
-      border-bottom: 0.1rem solid white;
+      border-bottom: 0.1rem solid var(--main-background-color-light);
     }
     .contactUs {
       padding-left: 0;
