style cahnges + local support for to do

--- a/src/To-do.scss
+++ b/src/To-do.scss
@@ -72,6 +72,7 @@
       button {
         border: none;
         color: var(--main-color-primary);
+        background-color: var(--main-background-color-primary);
         border-radius: 2vh;
         margin: 0 0.3vw 0 0.3vw;
         font-size: 0;
