--- a/src/index.scss
+++ b/src/index.scss
@@ -202,7 +202,7 @@ section {
     }
     text-align: center;
     width: 70%;
-    border-right: 0.2rem solid var(--main-color-secondary);
+    border-right: 0.2rem solid var(--main-color-primary);
     padding-right: 5%;
   }
   .contactUs {
@@ -212,7 +212,7 @@ section {
     padding-left: 5%;
     width: 30%;
     a {
-      color: #3f055a;
+      color: #9366a9;
     }
   }
 }
