Minor bug fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 :root {
-  --main-background-color-primary: #eaeaea;
+  --main-background-color-primary: #eeeeee;
   --main-color-primary: black;
   --navbar-color-primary: #dedede;
   --main-background-color-secondary: #2b2b2b;
@@ -16,7 +16,7 @@
   --navbar-color-secondary: #dedede;
 }
 [data-theme="light"] {
-  --main-background-color-primary: #eaeaea;
+  --main-background-color-primary: #ffffff;
   --main-color-primary: black;
   --navbar-color-primary: #dedede;
   --main-background-color-secondary: #2b2b2b;
