--- a/client/src/pomodoro.scss
+++ b/client/src/pomodoro.scss
@@ -85,11 +85,11 @@
     justify-content: center;
     align-items: center;
     button {
-      background-color: var(--main-background-color-secondary);
+      background-color: var(--navbar-color-secondary);
       color: var(--main-color-secondary);
       font-size: 3vh;
       font-weight: 500;
-      border: var(--main-color-secondary) 0.15rem solid;
+      border: var(--navbar-color-secondary) 0.15rem solid;
       border-radius: 2vh;
       padding: 0 1vh 0 1vh;
       padding: 1vh 2vh;
