--- a/client/src/weather.scss
+++ b/client/src/weather.scss
@@ -1,17 +1,3 @@
-:root {
-  --main-background-color: #eaeaea;
-  --navbar-color: #dedede;
-}
-$main-background-color-dark: #2b2b2b;
-$navbar-color-dark: black;
-[data-theme="dark"] {
-  --main-background-color: #2b2b2b;
-  --navbar-color: black;
-}
-[data-theme="light"] {
-  --main-background-color: #eaeaea;
-  --navbar-color: #dedede;
-}
 .weather {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -22,8 +8,8 @@ $navbar-color-dark: black;
     width: 100%;
     height: 100%;
     border-radius: 2vh;
-    border-color: var(--navbar-color);
-    background-color: var(--navbar-color);
+    border-color: var(--navbar-color-primary);
+    background-color: var(--navbar-color-primary);
     border-style: solid;
     border-width: 0.5vh;
     background-repeat: no-repeat;
@@ -64,7 +50,7 @@ $navbar-color-dark: black;
     width: 100%;
     height: 100%;
     z-index: 0;
-    background-color: var(--main-background-color);
+    background-color: var(--main-background-color-primary);
     opacity: 0.5;
     border-radius: 2vh;
   }
